# astonia_client

./: .gitattributes  .gitignore  Dockerfile.linux  Makefile  anicopy.c  astonia.h  build.zig  client.c  client.h  create_shortcut.bat  create_shortcut_interactive.bat  dd.c  dd.h  edit.c  edit_tool.c  engine.h  eula.txt  game.c  game.h  gfx.c  gui.c  gui.h  helper.c  jpeg.c  license.txt  main.c  main.h  moac.bat  moac.exe.xml  neuquant.c  neuquant.h  questlog.c  readme.md  resource.h  resource.rc  sdl.c  sdl.h  skill.c  sound.c  sound.h  (+3 more)
.github/workflows/: doit.yml  msys_build.yml
astonia_net/: Cargo.toml
astonia_net/src/: lib.rs
client/: _client.h  client.c  skill.c  skill.h
cursor/: c_atta.cur  c_buy.cur  c_drop.cur  c_get.cur  c_give.cur  c_junk.cur  c_pix.cur  c_sell.cur  c_set.cur  c_take.cur  ce_da1.cur  ce_pen.cur  ce_pip.cur  ce_ua3.cur
game/: _game.h  dd.c  font.c  game.c  main.c  questlog.c  sprite.c
gfx/: readme.md
gui/: _gui.h  cmd.c  color.c  display.c  dots.c  gui.c  gui.h  questlog.c  teleport.c
include/: astonia_net.h
moac/: .gitattributes  .gitignore  dd.c  dd.h  edit.h  font.c  game.c  gui.c  main.c  main.h  questlog.c  readme.md  resource.rc  skill.c  sound.h  spell.h  sprite.c  sprite.h
moac/cursor/: c_block.cur  c_look.cur  c_only.cur  c_rais.cur  c_say.cur  c_spell.cur  c_use.cur  ce_da2.cur  ce_rect.cur  ce_ua1.cur  ce_ua2.cur
res/cursor/: c_swap.cur  c_usew.cur
sdl/: _sdl.h  sdl.c  sdl.h  sound.c  sound.h
src/: astonia.h  client.h  dll.h  game.h  gui.h  modder.h  sdl.h
src/amod/: amod.c  amod.h  amod_structs.h  quests.c  (+3 more)
(+34 files in other folders)
